minors, java 11 switch case